--- a/index.html
+++ b/index.html
@@ -2,210 +2,232 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>BOBGRL Presale</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BOBGRL Presale</title>
 <style>
-body,html{margin:0;padding:0;font-family:Arial,sans-serif;background:#0d1b2a;color:#fff;overflow-x:hidden;scroll-behavior:smooth;}
-/* Animated tech gradient background */
-body::before {
-  content:"";position:fixed;top:0;left:0;width:100%;height:100%;
-  background:linear-gradient(270deg,#0f4c81,#1b6ca8,#00d8ff,#0f4c81);
-  background-size:1000% 1000%;animation:GradientBG 30s ease infinite;opacity:0.15;z-index:-1;
-}
-@keyframes GradientBG{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
-header{text-align:center;padding:2rem 1rem;background:linear-gradient(90deg,#0f4c81,#1b6ca8);}
-header h1{font-size:3rem;color:#00d8ff;margin-bottom:0.5rem;}
-nav{margin:1rem 0;}
-nav a{color:#66fcf1;margin:0 1rem;text-decoration:none;font-weight:bold;transition:0.3s;}
-nav a:hover{color:#00ffff;}
-.countdown{font-size:1.5rem;color:#66fcf1;margin-top:0.5rem;}
+  /* --- Global Styles --- */
+  body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background: #0b0c17;
+    color: #f0f0f5;
+    line-height: 1.6;
+  }
+  a { color: #4fc3f7; text-decoration: none; }
+  a:hover { text-decoration: underline; }
 
-/* Progress bar with SOL logo behind */
-.progress-container{position:relative;width:80%;margin:1rem auto;height:50px;background:#111;border-radius:25px;overflow:hidden;box-shadow:0 0 15px #00d8ff;}
-.progress-bar{height:100%;width:0%;background:linear-gradient(90deg,#00d8ff,#66fcf1,#00d8ff);background-size:200% 100%;animation:BarGlow 2s linear infinite;transition:width 0.5s;}
-@keyframes BarGlow{0%{background-position:0%}50%{background-position:100%}100%{background-position:0%}}
-.progress-sol{position:absolute;top:0;left:0;width:100%;height:100%;background:url('https://cryptologos.cc/logos/solana-sol-logo.svg?v=023') center/50px no-repeat;opacity:0.1;pointer-events:none;}
+  header {
+    padding: 1rem 2rem;
+    background: #0f111f;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 100;
+  }
 
-/* Sections and cards */
-.section{padding:3rem 1rem;max-width:1000px;margin:0 auto;}
-.cards{display:flex;flex-wrap:wrap;gap:1rem;justify-content:center;}
-.card{background:rgba(10,25,40,0.85);padding:1.5rem;border-radius:15px;flex:1 1 250px;text-align:center;transition:transform 0.3s,box-shadow 0.3s;cursor:pointer;}
-.card:hover{transform:translateY(-5px);box-shadow:0 0 25px #00d8ff;}
-h2{color:#00d8ff;margin-bottom:1rem;text-align:center;}
-.buy-box{background:rgba(10,25,40,0.85);padding:2rem;border-radius:15px;margin:2rem auto;max-width:450px;text-align:center;box-shadow:0 0 30px #00d8ff;}
-input,button{padding:12px;font-size:1rem;margin:0.5rem 0;border-radius:8px;border:none;transition:all 0.3s;}
-button{background:#00d8ff;color:#fff;cursor:pointer;width:100%;font-weight:bold;box-shadow:0 0 15px #00d8ff;animation:PulseGlow 2s infinite;}
-button:hover{opacity:0.9;transform:scale(1.05);box-shadow:0 0 25px #00ffff;}
-@keyframes PulseGlow{0%,100%{box-shadow:0 0 15px #00d8ff;}50%{box-shadow:0 0 30px #66fcf1;}}
-.faq-item{margin-bottom:1rem;}
-.faq-answer{display:none;margin-top:0.5rem;color:#a0e0ff;}
-footer{text-align:center;font-size:0.85rem;padding:1rem;color:#aaa;}
-@media(max-width:600px){.cards{flex-direction:column;}}
+  header h1 { margin:0; font-size:1.5rem; color:#4fc3f7;}
+  nav a { margin-left:1rem; font-weight:bold; }
+
+  main { padding:2rem; max-width: 900px; margin:auto; }
+
+  .section { margin-bottom:3rem; }
+  h2 { color:#4fc3f7; }
+
+  button {
+    background: #4fc3f7;
+    color:#0b0c17;
+    border:none;
+    padding:0.6rem 1.2rem;
+    font-size:1rem;
+    border-radius:5px;
+    cursor:pointer;
+  }
+  button:hover { background:#38b0e0; }
+
+  /* --- Progress bar --- */
+  .progress-container {
+    background: #1b1c2b;
+    border-radius: 10px;
+    overflow: hidden;
+    height: 25px;
+    margin-top:1rem;
+  }
+  .progress-bar {
+    background: #4fc3f7;
+    height: 100%;
+    width: 0%;
+    transition: width 0.5s;
+    text-align: right;
+    padding-right:5px;
+    box-sizing:border-box;
+    color:#0b0c17;
+    font-weight:bold;
+  }
+
+  /* --- Countdown timer --- */
+  .timer { font-size:1.2rem; margin-top:0.5rem; }
+
+  /* --- FAQ --- */
+  .faq-item { margin-bottom:1rem; }
+  .faq-question {
+    cursor:pointer;
+    padding:0.5rem;
+    background:#1b1c2b;
+    border-radius:5px;
+  }
+  .faq-answer { display:none; padding:0.5rem 1rem; }
+
+  /* --- Roadmap --- */
+  .roadmap { background:#131424; padding:1rem; border-radius:10px; }
+
+  /* --- Background image placeholder --- */
+  body::before {
+    content:"";
+    position:fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: url('') center/cover no-repeat;
+    opacity:0.05;
+    z-index:-1;
+  }
 </style>
 </head>
 <body>
 
 <header>
-<h1>BOBGRL Presale 🚀</h1>
-<nav>
-<a href="#buy-section">Buy</a>
-<a href="#tokenomics-section">Tokenomics</a>
-<a href="#roadmap-section">Roadmap</a>
-<a href="#faq-section">FAQ</a>
-</nav>
-<p class="countdown">⏳ Sale ends in <span id="countdown"></span></p>
-<div class="progress-container">
-  <div class="progress-sol"></div>
-  <div class="progress-bar" id="progress-bar"></div>
-</div>
-<p>Raised: $<span id="raised-usd">1,200,000</span> / $4,000,000 (<span id="raised-sol">0</span> SOL)</p>
-<p>Your holdings: <span id="user-holdings">0</span> USD</p>
+  <h1>BOBGRL</h1>
+  <nav>
+    <a href="#presale">Presale</a>
+    <a href="#roadmap">Roadmap</a>
+    <a href="#faq">FAQ</a>
+  </nav>
 </header>
 
-<section id="buy-section" class="section buy-box">
-<h2>Buy BOBGRL 💎</h2>
-<p>Enter USD amount (min $10)</p>
-<input type="number" id="usd-input" min="10" value="10">
-<p>≈ <span id="sol-output">0</span> SOL</p>
-<button id="buy-button">Buy with Phantom 🦊</button>
-<button id="mobile-buy">Buy with Mobile Wallet 📱</button>
-</section>
+<main>
+  <section id="presale" class="section">
+    <h2>Presale</h2>
+    <p>Connect your Phantom wallet to participate in the BOBGRL presale!</p>
+    <button id="connect-btn">Connect Phantom Wallet</button>
+    <p id="wallet-address" style="margin-top:0.5rem;"></p>
+    <div style="margin-top:1rem;">
+      <label>Purchase amount (USD, min $10): </label>
+      <input type="number" id="usd-amount" value="10" min="10" step="1"/>
+      <button id="buy-btn">Buy BOBGRL</button>
+    </div>
 
-<section id="tokenomics-section" class="section">
-<h2>Tokenomics</h2>
-<div class="cards">
-<div class="card"><strong>Total Supply:</strong> 1,000,000,000 BOBGRL</div>
-<div class="card"><strong>Burn on Sell:</strong> 50%</div>
-<div class="card"><strong>Liquidity Tax:</strong> 2%</div>
-<div class="card"><strong>Max Wallet/Buy:</strong> 2% of total supply</div>
-</div>
-</section>
+    <div class="progress-container">
+      <div id="progress-bar" class="progress-bar">1.2M</div>
+    </div>
+    <p id="progress-text">Raised $1,200,000 of $3,800,000</p>
+    <p class="timer" id="countdown"></p>
+  </section>
 
-<section id="roadmap-section" class="section">
-<h2>Roadmap</h2>
-<div class="cards">
-<div class="card"><strong>Phase 1:</strong> Presale & Community</div>
-<div class="card"><strong>Phase 2:</strong> Token Launch & DEX</div>
-<div class="card"><strong>Phase 3:</strong> Marketing & NFT Collabs</div>
-<div class="card"><strong>Phase 4:</strong> DAO & Rewards</div>
-</div>
-</section>
+  <section id="roadmap" class="section">
+    <h2>Roadmap</h2>
+    <div class="roadmap">
+      <ul>
+        <li>April: Presale launched - $1.2M collected</li>
+        <li>Next 3 months: Continue presale to $3.8M</li>
+        <li>Token launch & exchange listing</li>
+        <li>Community events & NFT collaborations</li>
+      </ul>
+    </div>
+  </section>
 
-<section id="faq-section" class="section faq">
-<h2>FAQ</h2>
-<div class="faq-item">
-<p class="faq-question"><strong>What is BOBGRL?</strong></p>
-<p class="faq-answer">A tech-forward meme coin for the community, built on Solana for fast and low-fee transactions.</p>
-</div>
-<div class="faq-item">
-<p class="faq-question"><strong>How do I buy?</strong></p>
-<p class="faq-answer">Use Phantom on desktop or Solana Pay-compatible wallets on mobile. Enter the contribution and confirm.</p>
-</div>
-<div class="faq-item">
-<p class="faq-question"><strong>When do I get tokens?</strong></p>
-<p class="faq-answer">Tokens are airdropped at launch. Contributions count only after successful transaction.</p>
-</div>
-<div class="faq-item">
-<p class="faq-question"><strong>Minimum contribution?</strong></p>
-<p class="faq-answer">$10 per transaction.</p>
-</div>
-<div class="faq-item">
-<p class="faq-question"><strong>Is it safe?</strong></p>
-<p class="faq-answer">Funds go directly to the treasury wallet. Phantom ensures secure authorization.</p>
-</div>
-<div class="faq-item">
-<p class="faq-question"><strong>Tokenomics?</strong></p>
-<p class="faq-answer">50% burn on sells, 2% liquidity tax, max 2% per wallet/buy.</p>
-</div>
-</section>
+  <section id="faq" class="section">
+    <h2>FAQ</h2>
+    <div class="faq-item">
+      <div class="faq-question">What is BOBGRL?</div>
+      <div class="faq-answer">BOBGRL is a deflationary meme coin designed to reward holders while burning tokens on sales.</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">How do I participate in the presale?</div>
+      <div class="faq-answer">Connect your Phantom wallet, enter an amount ≥ $10, and click Buy. Tokens will be credited virtually until the official launch.</div>
+    </div>
+    <div class="faq-item">
+      <div class="faq-question">What is the max presale goal?</div>
+      <div class="faq-answer">The progress bar caps at $3.8M, but contributions beyond this are still accepted.</div>
+    </div>
+  </section>
+</main>
 
-<footer>&copy; 2025 BOBGRL. All rights reserved.</footer>
-
-<script src="https://unpkg.com/@solana/web3.js@latest/lib/index.iife.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@latest/lib/index.iife.min.js"></script>
 <script>
-const TREASURY="ERGRYbUdR2ARJ5LapoztQzHt5qQPtfxuKsT23q3U7Aju";
-let solPrice=20; 
-let globalUSD=1200000;
+let provider = null;
 
-// Load user holdings from LocalStorage
-let userHoldings = parseFloat(localStorage.getItem('bobgrl_holdings')) || 0;
-document.getElementById('user-holdings').textContent = userHoldings.toLocaleString();
+// Detect Phantom wallet
+const getProvider = () => {
+  if ("solana" in window) {
+    const provider = window.solana;
+    if (provider.isPhantom) return provider;
+  }
+  window.alert("Phantom Wallet not found! Please install it.");
+};
+provider = getProvider();
 
-function updateConversion(){
-  const usd=parseFloat(document.getElementById("usd-input").value);
-  const sol=(usd/solPrice).toFixed(3);
-  document.getElementById("sol-output").textContent=sol;
-}
-function updateProgress(){
-  const percent=Math.min((globalUSD/3800000)*100,95);
-  document.getElementById("progress-bar").style.width=percent+"%";
-  document.getElementById("raised-usd").textContent=globalUSD.toLocaleString();
-  document.getElementById("raised-sol").textContent=(globalUSD/solPrice).toFixed(0);
-  document.getElementById("user-holdings").textContent = userHoldings.toLocaleString();
-}
-function startCountdown(){
-  let endDate=new Date(); endDate.setMonth(endDate.getMonth()+3);
-  setInterval(()=>{
-    let now=new Date().getTime(); let dist=endDate-now;
-    if(dist<0){endDate.setMonth(endDate.getMonth()+3); dist=endDate-now;}
-    let days=Math.floor(dist/(1000*60*60*24));
-    let hours=Math.floor((dist%(1000*60*60*24))/(1000*60*60));
-    let minutes=Math.floor((dist%(1000*60*60))/(1000*60));
-    let seconds=Math.floor((dist%(1000*60))/1000);
-    document.getElementById("countdown").textContent=`${days}d ${hours}h ${minutes}m ${seconds}s`;
-  },1000);
-}
-
-// Buy with Phantom
-document.getElementById("buy-button").onclick=async()=>{
-  const usd=parseFloat(document.getElementById("usd-input").value);
-  if(usd<10){alert("Minimum $10"); return;}
-  const sol=usd/solPrice;
-  if(!window.solana||!window.solana.isPhantom){alert("Phantom wallet not detected!"); return;}
-  try{
-    const provider=window.solana; await provider.connect();
-    const connection=new solanaWeb3.Connection("https://api.mainnet-beta.solana.com");
-    const tx=new solanaWeb3.Transaction().add(
-      solanaWeb3.SystemProgram.transfer({
-        fromPubkey:provider.publicKey,
-        toPubkey:new solanaWeb3.PublicKey(TREASURY),
-        lamports:sol*solanaWeb3.LAMPORTS_PER_SOL
-      })
-    );
-    tx.feePayer=provider.publicKey;
-    tx.recentBlockhash=(await connection.getRecentBlockhash()).blockhash;
-    const signed=await provider.signTransaction(tx);
-    const txid=await connection.sendRawTransaction(signed.serialize());
-    await connection.confirmTransaction(txid);
-    globalUSD+=usd; 
-    userHoldings += usd;
-    localStorage.setItem('bobgrl_holdings', userHoldings);
-    updateProgress();
-    alert("Transaction confirmed! TXID: "+txid);
-  }catch(e){console.error(e);alert("Transaction failed or cancelled.");}
+// Wallet connect
+const connectWallet = async () => {
+  try {
+    if (!provider) return;
+    const resp = await provider.connect();
+    document.getElementById("wallet-address").textContent = "Connected: " + resp.publicKey.toString();
+    console.log("Connected:", resp.publicKey.toString());
+  } catch (err) {
+    console.error("Connection failed:", err);
+    alert("Could not connect to wallet: " + err.message);
+  }
 };
 
-// Mobile wallet Solana Pay
-document.getElementById("mobile-buy").onclick=()=>{
-  const usd=parseFloat(document.getElementById("usd-input").value);
-  if(usd<10){alert("Minimum $10"); return;}
-  const sol=(usd/solPrice).toFixed(3);
-  window.location.href=`solana:${TREASURY}?amount=${sol}&label=BOBGRL%20Presale&message=Contribution%20to%20BOBGRL`;
+// Buy button (pseudo buy for now)
+const buyTokens = () => {
+  const usdAmount = parseFloat(document.getElementById("usd-amount").value);
+  if (usdAmount < 10) return alert("Minimum purchase is $10");
+  // Simulate token credit
+  alert(`Successfully contributed $${usdAmount}! Tokens credited virtually.`);
+  // Update progress bar
+  let progressBar = document.getElementById("progress-bar");
+  let progressText = document.getElementById("progress-text");
+  let current = parseFloat(progressBar.getAttribute("data-current") || 1200000);
+  let newAmount = current + usdAmount;
+  if(newAmount > 3800000) newAmount = 3800000;
+  progressBar.setAttribute("data-current", newAmount);
+  progressBar.style.width = ((newAmount/3800000)*100) + "%";
+  progressBar.textContent = "$" + (newAmount/1000000).toFixed(1) + "M";
+  progressText.textContent = `Raised $${newAmount.toLocaleString()} of $3,800,000`;
 };
 
-document.getElementById("usd-input").oninput=updateConversion;
+// Countdown timer
+const endTime = new Date();
+endTime.setMonth(endTime.getMonth()+3); // 3 months from now
+const countdownEl = document.getElementById("countdown");
+const updateCountdown = () => {
+  const now = new Date();
+  let diff = endTime - now;
+  if(diff < 0) diff = 0;
+  const d = Math.floor(diff/(1000*60*60*24));
+  const h = Math.floor((diff/(1000*60*60))%24);
+  const m = Math.floor((diff/(1000*60))%60);
+  const s = Math.floor((diff/1000)%60);
+  countdownEl.textContent = `Presale ends in: ${d}d ${h}h ${m}m ${s}s`;
+};
+setInterval(updateCountdown, 1000);
+updateCountdown();
 
 // FAQ toggle
-document.querySelectorAll('.faq-question').forEach(q=>{
-  q.addEventListener('click',()=>{ 
-    const a=q.nextElementSibling;
-    a.style.display=(a.style.display==='block')?'none':'block';
+document.querySelectorAll(".faq-question").forEach(q => {
+  q.addEventListener("click", () => {
+    const ans = q.nextElementSibling;
+    ans.style.display = ans.style.display==="block"?"none":"block";
   });
 });
 
-updateConversion(); 
-updateProgress(); 
-startCountdown();
+// Attach button handlers
+window.addEventListener("DOMContentLoaded", () => {
+  document.getElementById("connect-btn").addEventListener("click", connectWallet);
+  document.getElementById("buy-btn").addEventListener("click", buyTokens);
+});
 </script>
+
 </body>
 </html>
