--- a/index.html
+++ b/index.html
@@ -5,58 +5,61 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>BOBGRL Presale</title>
 <style>
-  body {
-    margin: 0; font-family:'Segoe UI',sans-serif;
-    background:#0b0c17; color:#f0f0f5; line-height:1.6;
-  }
-  a { color:#4fc3f7; text-decoration:none;}
-  a:hover {text-decoration:underline;}
-  header {
-    padding:1rem 2rem; background:#0f111f;
-    display:flex; justify-content:space-between; align-items:center;
-    position:sticky; top:0; z-index:100;
-  }
-  header h1 {margin:0;font-size:1.5rem;color:#4fc3f7;}
-  nav a {margin-left:1rem;font-weight:bold;}
-  main {padding:2rem; max-width:900px;margin:auto;}
-  .section {margin-bottom:3rem;}
-  h2 {color:#4fc3f7;}
-  button {
-    background:#4fc3f7;color:#0b0c17;border:none;
-    padding:0.6rem 1.2rem;font-size:1rem;border-radius:5px;cursor:pointer;
-  }
+  /* --- Global --- */
+  * { box-sizing:border-box; margin:0; padding:0; }
+  body { font-family:'Segoe UI',sans-serif; background:#0b0c17; color:#f0f0f5; overflow-x:hidden; line-height:1.6; }
+  a { color:#4fc3f7; text-decoration:none; } a:hover {text-decoration:underline;}
+  header { padding:1rem 2rem; background:rgba(15,17,31,0.95); display:flex; justify-content:space-between; align-items:center; position:sticky; top:0; z-index:1000;}
+  header h1 {color:#4fc3f7;}
+  nav a {margin-left:1rem; font-weight:bold;}
+  main {max-width:1200px; margin:auto; padding:2rem; position:relative; z-index:2;}
+  section {margin-bottom:4rem;}
+  h2 {color:#4fc3f7; margin-bottom:1rem;}
+  p {margin-bottom:1rem;}
+  button {background:#4fc3f7;color:#0b0c17;border:none;padding:0.6rem 1.2rem;font-size:1rem;border-radius:5px;cursor:pointer; transition:0.3s;}
   button:hover {background:#38b0e0;}
-  .progress-container {
-    background:#1b1c2b;border-radius:10px;overflow:hidden;height:25px;margin-top:1rem;
-  }
-  .progress-bar {
-    background:#4fc3f7;height:100%;width:0%;transition:width 0.5s;
-    text-align:right;padding-right:5px;box-sizing:border-box;color:#0b0c17;font-weight:bold;
-  }
+  input[type=number] {padding:0.5rem; width:100px; border-radius:5px; border:none; margin-left:0.5rem;}
+  .progress-container {background:#1b1c2b;border-radius:10px;overflow:hidden;height:25px;margin-top:1rem;}
+  .progress-bar {background:#4fc3f7;height:100%;width:0%;transition:width 0.5s; text-align:right;padding-right:5px;box-sizing:border-box;color:#0b0c17;font-weight:bold;}
   .timer { font-size:1.2rem; margin-top:0.5rem;}
   .faq-item { margin-bottom:1rem; }
   .faq-question { cursor:pointer;padding:0.5rem;background:#1b1c2b;border-radius:5px;}
-  .faq-answer { display:none; padding:0.5rem 1rem; }
+  .faq-answer { display:none; padding:0.5rem 1rem; background:#131424; border-radius:5px; margin-top:0.3rem;}
   .roadmap { background:#131424; padding:1rem; border-radius:10px; }
+  .tokenomics { display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:1rem; }
+  .token-card { background:#1b1c2b; padding:1rem; border-radius:10px; text-align:center; }
+  .team { display:grid; grid-template-columns:repeat(auto-fit,minmax(150px,1fr)); gap:1rem; }
+  .team-member { background:#1b1c2b; padding:1rem; border-radius:10px; text-align:center; }
+  .whitepaper iframe { width:100%; height:600px; border:none; border-radius:10px; }
+  /* --- Background animation --- */
+  #stars { position:fixed; top:0; left:0; width:100%; height:100%; background:#0b0c17; z-index:0; overflow:hidden; }
+  .star { position:absolute; width:2px; height:2px; background:white; border-radius:50%; opacity:0.8; animation:twinkle 5s infinite alternate; }
+  @keyframes twinkle { from {opacity:0.2;} to {opacity:0.8;} }
 </style>
 </head>
 <body>
+
+<div id="stars"></div>
 
 <header>
   <h1>BOBGRL</h1>
   <nav>
     <a href="#presale">Presale</a>
+    <a href="#tokenomics">Tokenomics</a>
     <a href="#roadmap">Roadmap</a>
+    <a href="#whitepaper">Whitepaper</a>
     <a href="#faq">FAQ</a>
+    <a href="#team">Team</a>
   </nav>
 </header>
 
 <main>
-<section id="presale" class="section">
+<!-- --- Presale --- -->
+<section id="presale">
   <h2>Presale</h2>
   <p>Connect your Phantom wallet to participate in the BOBGRL presale!</p>
   <button id="connect-btn">Connect Phantom Wallet</button>
-  <p id="wallet-address" style="margin-top:0.5rem;"></p>
+  <p id="wallet-address"></p>
 
   <div style="margin-top:1rem;">
     <label>Purchase amount (USD, min $10): </label>
@@ -71,7 +74,39 @@
   <p class="timer" id="countdown"></p>
 </section>
 
-<section id="roadmap" class="section">
+<!-- --- Tokenomics --- -->
+<section id="tokenomics">
+  <h2>Tokenomics</h2>
+  <div class="tokenomics">
+    <div class="token-card">
+      <h3>Total Supply</h3>
+      <p>1,000,000,000 BOBGRL</p>
+    </div>
+    <div class="token-card">
+      <h3>Burn on Sell</h3>
+      <p>50%</p>
+    </div>
+    <div class="token-card">
+      <h3>Liquidity Tax</h3>
+      <p>2%</p>
+    </div>
+    <div class="token-card">
+      <h3>Max Wallet</h3>
+      <p>2% of supply</p>
+    </div>
+    <div class="token-card">
+      <h3>Presale Price</h3>
+      <p>$0.01 / BOBGRL</p>
+    </div>
+    <div class="token-card">
+      <h3>Deflationary</h3>
+      <p>Yes, tokens decrease on sales</p>
+    </div>
+  </div>
+</section>
+
+<!-- --- Roadmap --- -->
+<section id="roadmap">
   <h2>Roadmap</h2>
   <div class="roadmap">
     <ul>
@@ -79,11 +114,20 @@
       <li>Next 3 months: Continue presale to $4M</li>
       <li>Token launch & exchange listing</li>
       <li>Community events & NFT collaborations</li>
+      <li>Marketing campaigns & partnerships</li>
     </ul>
   </div>
 </section>
 
-<section id="faq" class="section">
+<!-- --- Whitepaper --- -->
+<section id="whitepaper">
+  <h2>Whitepaper</h2>
+  <p>Read the full whitepaper below:</p>
+  <iframe src="https://example.com/whitepaper.pdf"></iframe>
+</section>
+
+<!-- --- FAQ --- -->
+<section id="faq">
   <h2>FAQ</h2>
   <div class="faq-item">
     <div class="faq-question">What is BOBGRL?</div>
@@ -91,11 +135,30 @@
   </div>
   <div class="faq-item">
     <div class="faq-question">How do I participate in the presale?</div>
-    <div class="faq-answer">Connect your Phantom wallet, enter an amount ≥ $10, and click Buy. Tokens are credited virtually after successful transaction.</div>
+    <div class="faq-answer">Connect your Phantom wallet, enter an amount ≥ $10, and click Buy. Tokens are credited after a successful transaction.</div>
   </div>
   <div class="faq-item">
     <div class="faq-question">What is the max presale goal?</div>
     <div class="faq-answer">The progress bar caps at $4M, but contributions beyond this are still accepted.</div>
+  </div>
+  <div class="faq-item">
+    <div class="faq-question">Can I test this on Devnet?</div>
+    <div class="faq-answer">Yes, this page is preconfigured for Solana Devnet for safe testing.</div>
+  </div>
+</section>
+
+<!-- --- Team --- -->
+<section id="team">
+  <h2>Team</h2>
+  <div class="team">
+    <div class="team-member">
+      <h3>Charles Copeland</h3>
+      <p>Founder & Developer</p>
+    </div>
+    <div class="team-member">
+      <h3>Jane Doe</h3>
+      <p>Marketing Lead</p>
+    </div>
   </div>
 </section>
 </main>
@@ -104,107 +167,97 @@
 <script>
 let provider = null;
 const TREASURY = "ERGRYbUdR2ARJ5LapoztQzHt5qQPtfxuKsT23q3U7Aju";
-const USD_TO_SOL = 0.02; // example static rate: $1 = 0.02 SOL
+const USD_TO_SOL = 0.02;
 
-// Detect Phantom wallet
-const getProvider = () => {
-  if ("solana" in window) {
-    const provider = window.solana;
-    if (provider.isPhantom) return provider;
-  }
-  window.alert("Phantom Wallet not found! Please install it.");
-};
-provider = getProvider();
+// Generate animated stars
+const starCount=100;
+const starsContainer=document.getElementById("stars");
+for(let i=0;i<starCount;i++){
+  const star=document.createElement("div");
+  star.classList.add("star");
+  star.style.top=Math.random()*100+"%";
+  star.style.left=Math.random()*100+"%";
+  star.style.width=star.style.height=(Math.random()*2+1)+"px";
+  star.style.animationDuration=(Math.random()*5+3)+"s";
+  starsContainer.appendChild(star);
+}
+
+// Phantom wallet detection
+const getProvider=()=>{ if("solana" in window){ const p=window.solana; if(p.isPhantom) return p; } alert("Phantom Wallet not found!"); };
+provider=getProvider();
 
 // Connect wallet
-const connectWallet = async () => {
-  if(!provider) return;
-  try {
-    const resp = await provider.connect();
-    document.getElementById("wallet-address").textContent = "Connected: " + resp.publicKey.toString();
-  } catch(e) {
-    alert("Connection failed: "+e.message);
-  }
-};
+const connectWallet=async()=>{ if(!provider) return; try{ const resp=await provider.connect(); document.getElementById("wallet-address").textContent="Connected: "+resp.publicKey.toString(); } catch(e){ alert("Connection failed: "+e.message);}};
 
-// Buy button functionality
-const buyTokens = async () => {
-  if(!provider || !provider.isConnected) return alert("Please connect your wallet first.");
-  const usd = parseFloat(document.getElementById("usd-amount").value);
-  if(usd < 10) return alert("Minimum purchase is $10");
+// Buy tokens
+const buyTokens=async()=>{
+  if(!provider||!provider.isConnected) return alert("Connect your wallet first.");
+  const usd=parseFloat(document.getElementById("usd-amount").value);
+  if(usd<10) return alert("Minimum $10");
 
-  const solAmount = usd * USD_TO_SOL;
-  try {
-    const connection = new solanaWeb3.Connection(solanaWeb3.clusterApiUrl("mainnet-beta"), "confirmed");
-    const fromPubkey = provider.publicKey;
-    const toPubkey = new solanaWeb3.PublicKey(TREASURY);
-    const transaction = new solanaWeb3.Transaction().add(
+  const solAmount=usd*USD_TO_SOL;
+  try{
+    const connection=new solanaWeb3.Connection("https://api.devnet.solana.com","confirmed");
+    const fromPubkey=provider.publicKey;
+    const toPubkey=new solanaWeb3.PublicKey(TREASURY);
+    const transaction=new solanaWeb3.Transaction().add(
       solanaWeb3.SystemProgram.transfer({
         fromPubkey,
         toPubkey,
-        lamports: solAmount * solanaWeb3.LAMPORTS_PER_SOL
+        lamports: solAmount*solanaWeb3.LAMPORTS_PER_SOL
       })
     );
-    const { blockhash } = await connection.getRecentBlockhash();
-    transaction.recentBlockhash = blockhash;
-    transaction.feePayer = fromPubkey;
+    const { blockhash }=await connection.getRecentBlockhash();
+    transaction.recentBlockhash=blockhash;
+    transaction.feePayer=fromPubkey;
 
-    const signed = await provider.signTransaction(transaction);
-    const txid = await connection.sendRawTransaction(signed.serialize());
+    const signed=await provider.signTransaction(transaction);
+    const txid=await connection.sendRawTransaction(signed.serialize());
     await connection.confirmTransaction(txid);
 
-    alert(`Purchase successful! Transaction ID: ${txid}`);
-    // Update virtual holdings (example 1:1 for USD to tokens)
+    alert(`Purchase successful! TXID: ${txid}`);
     updateProgress(usd);
-  } catch(e) {
-    console.error(e);
-    alert("Transaction failed: "+e.message);
-  }
+  } catch(e){ console.error(e); alert("Transaction failed: "+e.message);}
 };
 
-const updateProgress = (usdAmount) => {
-  let progressBar = document.getElementById("progress-bar");
-  let progressText = document.getElementById("progress-text");
-  let current = parseFloat(progressBar.getAttribute("data-current"));
-  let newAmount = current + usdAmount;
+// Update progress bar
+const updateProgress=(usdAmount)=>{
+  let bar=document.getElementById("progress-bar");
+  let text=document.getElementById("progress-text");
+  let current=parseFloat(bar.getAttribute("data-current"));
+  let newAmount=current+usdAmount;
   if(newAmount>4000000) newAmount=4000000;
-  progressBar.setAttribute("data-current", newAmount);
-  const widthPercent = (newAmount/4000000)*100;
-  progressBar.style.width = widthPercent+"%";
-  progressBar.textContent = "$"+(newAmount/1000000).toFixed(2)+"M";
-  progressText.textContent = `Raised $${newAmount.toLocaleString()} of $4,000,000`;
+  bar.setAttribute("data-current",newAmount);
+  const width=(newAmount/4000000)*100;
+  bar.style.width=width+"%";
+  bar.textContent="$"+(newAmount/1000000).toFixed(2)+"M";
+  text.textContent=`Raised $${newAmount.toLocaleString()} of $4,000,000`;
 };
 
 // Countdown timer
-const endTime = new Date();
-endTime.setMonth(endTime.getMonth()+3);
-const countdownEl = document.getElementById("countdown");
-const updateCountdown = () => {
-  const now = new Date();
-  let diff = endTime - now;
+const endTime=new Date(); endTime.setMonth(endTime.getMonth()+3);
+const countdownEl=document.getElementById("countdown");
+const updateCountdown=()=>{
+  const now=new Date(); let diff=endTime-now;
   if(diff<0) diff=0;
   const d=Math.floor(diff/(1000*60*60*24));
   const h=Math.floor((diff/(1000*60*60))%24);
   const m=Math.floor((diff/(1000*60))%60);
   const s=Math.floor((diff/1000)%60);
-  countdownEl.textContent = `Presale ends in: ${d}d ${h}h ${m}m ${s}s`;
+  countdownEl.textContent=`Presale ends in: ${d}d ${h}h ${m}m ${s}s`;
 };
-setInterval(updateCountdown,1000);
-updateCountdown();
+setInterval(updateCountdown,1000); updateCountdown();
 
 // FAQ toggle
 document.querySelectorAll(".faq-question").forEach(q=>{
-  q.addEventListener("click",()=>{
-    const ans=q.nextElementSibling;
-    ans.style.display=ans.style.display==="block"?"none":"block";
-  });
+  q.addEventListener("click",()=>{ const ans=q.nextElementSibling; ans.style.display=(ans.style.display==="block"?"none":"block"); });
 });
 
+// Event listeners
 window.addEventListener("DOMContentLoaded",()=>{
   document.getElementById("connect-btn").addEventListener("click",connectWallet);
   document.getElementById("buy-btn").addEventListener("click",buyTokens);
 });
 </script>
-
 </body>
 </html>
