--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <div class="card">
       <div class="faq-item">
         <div class="faq-question">How do I participate?</div>
-        <div class="faq-answer">Connect Phantom, enter USD (minimum $10), click Buy, confirm the Phantom popup. After confirmation your contribution will be shown and tokens credited locally.</div>
+        <div class="faq-answer">Connect Phantom, switch to Mainet, enter USD (minimum $10), click Buy, confirm the Phantom popup. After confirmation your contribution will be shown and tokens credited locally, tokens will AirDrop to wallet on launch.</div>
       </div>
 
       <div class="faq-item">
@@ -230,12 +230,12 @@
 
       <div class="faq-item">
         <div class="faq-question">How are tokens distributed?</div>
-        <div class="faq-answer">Tokens are calculated at $0.01 per token. The site displays an estimated token amount before purchase and updates holdings after confirmation.</div>
+        <div class="faq-answer">Tokens are calculated at $0.01 per token. The site displays an estimated token amount before purchase and updates holdings after confirmation, tokens will be AirDropped on launch day.</div>
       </div>
 
       <div class="faq-item">
         <div class="faq-question">What if my transaction fails?</div>
-        <div class="faq-answer">You will see an error in the status area. Common causes: insufficient SOL balance or network/RPC issues. You can switch to Devnet for testing.</div>
+        <div class="faq-answer">You will see an error in the status area. Common causes: insufficient SOL balance or network/RPC issues. .</div>
       </div>
     </div>
   </section>
@@ -245,11 +245,11 @@
     <h2>Team</h2>
     <div class="card grid">
       <div>
-        <h3>Charles Copeland</h3>
+        <h3>Chanpreet Ahmed</h3>
         <p class="muted">Founder & Developer</p>
       </div>
       <div>
-        <h3>Jane Doe</h3>
+        <h3>Arbab Bindar</h3>
         <p class="muted">Marketing</p>
       </div>
     </div>
@@ -567,3 +567,4 @@ document.querySelectorAll(".faq-question").forEach(q => {
 </script>
 </body>
 </html>
+
