--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 /* --------------------------
    Configuration / constants
    -------------------------- */
-const TREASURY_ADDRESS = "ERGRYbUdR2ARJ5LapoztQzHt5qQPtfxuKsT23q3U7Aju"; // your receiving address (hard-coded)
+const TREASURY_ADDRESS = "ERGRYbUdR2ARJ5LapoztQzHt5qQPtfxuKsT23q3U7Aju"; // your receiving address 
 const GOAL_USD = 4_000_000_000; // presale goal displayed
 const START_CURRENT_USD = 1_209_342_990; // starting raised amount (displayed)
 const PRESALE_PRICE_USD = 0.01; // price per token
@@ -567,5 +567,6 @@ document.querySelectorAll(".faq-question").forEach(q => {
 </script>
 </body>
 </html>
+
 
 
